added "Learn some Swift" button in main view, added next view controller

--- a/SwiftLearner/Base.lproj/Main.storyboard
+++ b/SwiftLearner/Base.lproj/Main.storyboard
@@ -37,17 +37,27 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i9f-f1-mkQ">
+                                <rect key="frame" x="186" y="411" width="228" height="40"/>
+                                <fontDescription key="fontDescription" name="Marion-Regular" family="Marion" pointSize="30"/>
+                                <state key="normal" title="Learn some Swift!">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
                             <constraint firstItem="0ck-sH-TWG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="2" id="AJY-rd-AI3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="i9f-f1-mkQ" secondAttribute="trailing" constant="60" id="AVr-1I-Wd7"/>
                             <constraint firstAttribute="trailingMargin" secondItem="sWY-5q-Ixj" secondAttribute="trailing" constant="60" id="JBG-DQ-gRN"/>
                             <constraint firstItem="lmC-Yg-1g0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="Lir-Ud-Lf7"/>
                             <constraint firstAttribute="trailingMargin" secondItem="lmC-Yg-1g0" secondAttribute="trailing" constant="-16" id="MUZ-5B-1cW"/>
+                            <constraint firstItem="i9f-f1-mkQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="60" id="OTP-mM-gXx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="0ck-sH-TWG" secondAttribute="trailing" constant="2" id="OyX-Pm-EOD"/>
                             <constraint firstItem="lmC-Yg-1g0" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="Qj9-bc-Ogd"/>
                             <constraint firstItem="YWT-28-cgh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="150" id="Vt8-jy-HpP"/>
                             <constraint firstItem="YWT-28-cgh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="hS0-BP-59C"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="i9f-f1-mkQ" secondAttribute="bottom" constant="200" id="pQU-kT-8oS"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lmC-Yg-1g0" secondAttribute="bottom" id="t6Q-Ro-Il8"/>
                             <constraint firstAttribute="trailingMargin" secondItem="YWT-28-cgh" secondAttribute="trailing" constant="40" id="tQy-05-GdG"/>
                             <constraint firstItem="sWY-5q-Ixj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="60" id="uDm-Rm-Kah"/>
@@ -56,6 +66,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="vW9-oL-DVD">
+            <objects>
+                <viewController id="v0y-74-T5L" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Id5-8A-SHA"/>
+                        <viewControllerLayoutGuide type="bottom" id="ag8-YD-jN9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PjM-JI-T1d">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="baB-zJ-faf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="782" y="133"/>
         </scene>
     </scenes>
     <resources>
